1.11/pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes: # Define volume
        - name: shared-pingpongmain
          persistentVolumeClaim:
            claimName: pingpongmain-claim
      containers:
        - name: pingpong
          image: liitos/pingpong:1.11
          volumeMounts: # Mount volume
          - name: shared-pingpongmain
            mountPath: /usr/app
