1.11/pingpong/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpongmain-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-svc
          servicePort: 2345
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2345
